src/routes/About/style.scss
@import 'sass-includes';

.about-gradient {
  background: rgb(236, 0, 94); /* Old browsers */
  background: -moz-linear-gradient(top,  rgba(236, 0, 94, 1) 0%, rgba(255, 0, 172, 1) 100%); /* FF3.6-15 */
  background: -webkit-linear-gradient(top,  rgba(236, 0, 94, 1) 0%, rgba(255, 0, 172, 1) 100%); /* Chrome10-25,Safari5.1-6 */
  background: linear-gradient(to bottom,  rgba(236, 0,94, 1) 0%, rgba(255, 0, 172, 1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ec005e', endColorstr='#ff00ac',GradientType=0 ); /* IE6-9 */
}

.about__office-image img {
  width: 100%;
}

.about--process__flex {
  display: flex;
  align-items: center;
  justify-content: center;
  padding-top: 14rem;
  // media queries
  @include breakpoint($tablet-md) {
    display: block;
  }
  @include breakpoint($mobile-lg) {
    padding-top: 15rem;
  }

  h4 {
    @include breakpoint($mobile-lg) {
      line-height: 2;
    }
  }
}

.about--process__image {
  max-height: 66rem;
  // media queries
  @include breakpoint($tablet-md) {
    text-align: center;
  }
}

.about section {
  position: relative;
  color: #4A4A4A;
}

.about--clients h2 {
  width: 69%;
  // media queries
  @include breakpoint($mobile-lg) {
    width: 100%;
  }
}

// Team
.about {
  .modal__close {
    @extend %page-margins;
    right: 0;
    text-align: right;

    .icon-close {
      color: $body;
      left: 0;
    }
  }
}

.team-member__modal {
  background-repeat: no-repeat;
  background-position: right;
  background-color: $white;
  top: 0;
  bottom: 0;
  position: absolute;
  width: 100%;
  // media queries
  @include breakpoint($mobile-lg) {
    width: 100%;
    overflow-y: scroll;
  }
}

.about--team {
  img {
    display: block;
  }

  .team-member {
    position: relative;
    overflow: hidden;
    height: auto;
    text-transform: lowercase;
    cursor: pointer;
  }

  h2 {
    line-height: 1.2;
    padding-bottom: 0.5rem;
    // media queries
    @include breakpoint($mobile-lg) {
      line-height: 1.45;
    }

    @include breakpoint($mobile-sm) {
      line-height: 1.2;
      padding: 0;
    }
  }

  h4 {
    line-height: 1.333;
    @include breakpoint($mobile-sm) {
      line-height: 1.1;
      padding: 0;
    }
  }

  h2,
  h4 {
    // media queries
    @include breakpoint($mobile-lg) {
      font-size: 2.496rem;
    }
    @include breakpoint($mobile-sm) {
      font-size: 2rem;
    }
  }

  .right-arrow {
    position: absolute;
    bottom: 4rem;
    margin-top: 0;

    @include breakpoint($mobile-sm) {
      bottom: 2rem;
    }

    img {
      // media queries
      @include breakpoint($mobile-lg) {
        height: 0.7rem;
      }
    }
  }

  .quarter-width {
    //media queries
    @include breakpoint($tablet-md) {
      width: 50%;
    }
  }
}

.team-member-bio {
  overflow-x: visible;
  position: relative;
  top: 50%;
  transform: translateY(-50%);
  z-index: 9;
  // media queries
  @media screen and (max-height: 680px) {
    position: static;
    transform: none;
  }
  @include breakpoint($mobile-lg) {
    transform: none;
    top: 5rem;
  }

  h2 {
    text-transform: lowercase;
    // media queries
    @include breakpoint($desktop-lg) {
      font-size: 3.6rem;
    }

    @include breakpoint($mobile-lg) {
      font-size: 2.8rem;
      line-height: 1.65;
    }
  }

  h5 {
    background-color: #fff;
    // media queries
    @include breakpoint($desktop-lg) {
      font-size: 2.1rem;
    }

    @include breakpoint($mobile-lg) {
      font-size: 1.4rem;
    }
  }
}

.bio--wrap {
  position: absolute;
  bottom: 0;
  height: 100%;
  top: 0;
  // media queries
  @include breakpoint($tablet-md) {
    position: relative;
  }
}

.bio--wrap__img {
  position: relative;
  height: 100%;
  text-align: center;
  left: -65%;
  transform: translateX(50%);
  // margin: 0 auto;
  @include breakpoint($desktop-lg) {
    left: -75%;
  }
  img {
    height: 100%;
    width: auto;
    position: absolute;
    @media screen and (max-height: 680px) {
      min-height: 67.5rem;
    }
    // @include breakpoint($desktop-lg) {
    //   right: -5rem;
    // }
    // @include breakpoint($tablet-lg) {
    //   right: -10rem;
    // }
    // @media only screen and (max-height: 1080px) {
    //   bottom: auto;
    //   top: 0;
    // }
    // @include breakpoint($desktop-sm) {

    // }
  }
}

.about .modal__wrap .icon-close {
  text-shadow:
    -3px -3px 6px rgba($white, 0.35),
    3px -3px 6px rgba($white, 0.35),
    -3px 3px 6px rgba($white, 0.35),
    3px 3px 6px rgba($white, 0.35);
}

